tests/dupe-datatype/out.txt
error: redefined identifier: t
  ┌─ err.sml:1:20
  │
1 │ datatype t = A and t = B
  │                    ^

typechecking failed
